Cambio local para simular conflicto

--- a/chart.html
+++ b/chart.html
@@ -16,7 +16,7 @@
     }
     h1, h2, h3 {
       text-align: center;
-      color: #2c3e50;
+      color: #ebeb0e;
     }
     .container {
       display: flex;
